--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,7 +22,7 @@ body {
 
 header{
     height: 100vh;
-    background-image: linear-gradient(to top, rgba(199, 144, 129, 0.425) 0%, rgba(223, 165, 121, 0.438) 100%), url(img/img-portada.jpg);
+    background-image: linear-gradient(120deg, rgba(246, 212, 101, 0.514) 0%, rgba(253, 159, 133, 0.486) 100%), url(../img/img-portada.jpg);
 
     background-repeat: no-repeat;
     background-size: cover;
@@ -164,7 +164,7 @@ header{
 
 .footer{
   
-    background: #946204a4;
+    background: rgba(235, 171, 52, 0.651);
     padding-bottom: 0.1px;
     
 }
