--- a/css/estilos.css
+++ b/css/estilos.css
@@ -61,6 +61,36 @@ form{
     display: block;
     
 }
+table {
+    max-width: 90%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: white;
+    border: 1px solid lightslategray;
+    border-radius: 5px;
+}
+
+input[type="submit"] {
+    padding: 10px;
+    background-color: #007bff;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
+.contenedor-lista{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.contenedor-centrado {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
 
 form.formulario{
     position: relative;
